Fix Windows Phone DB, Fix Android Maps
Fixed windows phone database to actually Init. Additional fixes for
formatting text on menu.

On Android fixed Maps to actually showup if you have key.
Fixed Init on Database by ignoring a few things.

--- a/CodeCamp/Views/TwitterPage.xaml
+++ b/CodeCamp/Views/TwitterPage.xaml
@@ -5,7 +5,7 @@
              Title="{Binding Title}">
   <StackLayout>
     <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}"/>
-    <ListView ItemsSource="{Binding Tweets}" RowHeight="110">
+    <ListView x:Name="ListTweets" ItemsSource="{Binding Tweets}" RowHeight="110">
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
